--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="container">
                     <div class="row">
                       <div class="home-info padd-15">
-                        <h3 class="hello">Hello, my name is<span class="name"> Sofoklis</span></h3>
+                        <h3 class="hello">Hi there, my name is<span class="name"> Sofoklis</span></h3>
                         <h3 class="my-profession">I'm a <span class="typing"> Software Developer
                         </span>
                         </h3>
@@ -52,7 +52,7 @@
                         <a href="#" class="btn">Download CV</a>
                       </div>
                       <div class="home-img padd-15">
-                        <img src="images/hero.jpg" alt="">
+                        <img src="images/devsofo.jpg" alt="">
                       </div>  
                     </div>
                 </div>
@@ -70,19 +70,13 @@
                   <div class="about-content padd-15">
                     <div class="row">
                       <div class="about-text padd-15">
-                        <h3>Hi, I'm Sofoklis and <span> i am a Software Developer</span></h3>
+                        <h3>Hi there, I'm Sofoklis and <span> i am a Software Developer</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa voluptatum vel rem quisquam, illum, aperiam debitis nemo commodi ipsum sapiente. Ipsa sunt autem reiciendis nobis assumenda vero odit porro.</p>
                       </div>
                     </div>
                     <div class="row">
                       <div class="personal-info padd-15">
                         <div class="row">
-                          <div class="info-item padd-15">
-                            <p>Birthday : <span>17 sep 1999</span></p>
-                          </div>
-                          <div class="info-item padd-15">
-                            <p>Age : <span>22</span></p>
-                          </div>
                           <div class="info-item padd-15">
                             <p>Website : <span>www.domain.com</span></p>
                           </div>
@@ -114,35 +108,30 @@
                             <h5>CSS</h5>
                             <div class="progress">
                               <div class="progress-in" style="width:76%;"></div>
-                              <div class="skill-percent">76%</div>
                             </div>
                           </div>
                           <div class="skill-item padd-15">
                             <h5>JS</h5>
                             <div class="progress">
                               <div class="progress-in" style="width:86%;"></div>
-                              <div class="skill-percent">86%</div>
                             </div>
                           </div>
                           <div class="skill-item padd-15">
                             <h5>PHP</h5>
                             <div class="progress">
                               <div class="progress-in" style="width:66%;"></div>
-                              <div class="skill-percent">76%</div>
                             </div>
                           </div>
                           <div class="skill-item padd-15">
                             <h5>HTML</h5>
                             <div class="progress">
                               <div class="progress-in" style="width:96%;"></div>
-                              <div class="skill-percent">76%</div>
                             </div>
                           </div>
                           <div class="skill-item padd-15">
                             <h5>BOOTSTRAP</h5>
                             <div class="progress">
                               <div class="progress-in" style="width:76%;"></div>
-                              <div class="skill-percent">76%</div>
                             </div>
                           </div>
                         </div>
@@ -158,7 +147,7 @@
                               <div class="timeline-item">
                                 <div class="circle-dot"></div>
                                 <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
+                                  <i class="fa fa-calendar">2020-2025</i>
                                 </h3>
                                 <h4 class="timeline-title">Bachelors in Computer Science</h4>
                                 <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
