--- a/index.html
+++ b/index.html
@@ -150,27 +150,8 @@
                                   <i class="fa fa-calendar">2020-2025</i>
                                 </h3>
                                 <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
+                                <p class="timeline-text">Currently i am in my 4th Year as a Computer Science Student in Hellenic Open University</p>
                               </div>
-                              <!--Timeline Item-->
-                              <div class="timeline-item">
-                                <div class="circle-dot"></div>
-                                <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
-                                </h3>
-                                <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
-                              </div>
-                              <!--Timeline Item-->
-                              <div class="timeline-item">
-                                <div class="circle-dot"></div>
-                                <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
-                                </h3>
-                                <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
-                              </div>
-
                             </div>
                           </div>
                         </div>
@@ -184,28 +165,19 @@
                               <div class="timeline-item">
                                 <div class="circle-dot"></div>
                                 <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
+                                  <i class="fa fa-calendar">2020-2023</i>
                                 </h3>
-                                <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
+                                <h4 class="timeline-title">Freelance Web Developer</h4>
+                                <p class="timeline-text">During that time i developed multiple sites for clients some of which i list below in my Projects Section</p>
                               </div>
                               <!--Timeline Item-->
                               <div class="timeline-item">
                                 <div class="circle-dot"></div>
                                 <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
+                                  <i class="fa fa-calendar">2O23-now</i>
                                 </h3>
-                                <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
-                              </div>
-                              <!--Timeline Item-->
-                              <div class="timeline-item">
-                                <div class="circle-dot"></div>
-                                <h3 class="timeline-date">
-                                  <i class="fa fa-calendar">2013-2015</i>
-                                </h3>
-                                <h4 class="timeline-title">Bachelors in Computer Science</h4>
-                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ab adipisci iusto nostrum quas libero, quidem provident excepturi error minima quos assumenda, itaque a rem.</p>
+                                <h4 class="timeline-title">Software Engineer at Pantera AG, Zurich</h4>
+                                <p class="timeline-text">Currently working at this company as a contractor, mainly using technologies such as React.js, Typescript </p>
                               </div>
                             </div>
                           </div>
@@ -366,7 +338,7 @@
                   </div>
                 </div>
                 <h3 class="contact-title padd-15">Do You Have Any Questions ?</h3>
-                <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                <h4 class="contact-sub-title padd-15">DON'T HESITATE TO SEND ME A MESSAGE</h4>
                 <div class="row">
                   <!--Contact info item start-->
                   <div class="contact-info-item padd-15">
