--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="row">
                       <div class="home-info padd-15">
                         <h3 class="hello">Hi there, my name is<span class="name"> Sofoklis</span></h3>
-                        <h3 class="my-profession">I'm a <span class="typing"> Software Developer
+                        <h3 class="my-profession">I'm a <span class="typing"> Software Engineer
                         </span>
                         </h3>
                         <p> with extensive experience for over 10 years.My expertise is to create websites, graphic design, and many more...</p>
